# cephMultisiteObservability

./: README.md  config.yaml  executive_summary.md  generateLoad.sh  multisiteSetup.md  setup.sh
adminRGWAPI/: api.py
backend/: api_server.py  collector.py  requirements.txt  test_steps.py  zone_agent.py
binary/: README.md  cli.py  pyproject.toml
dashboard/: RGWMultisiteMonitor.jsx  build_html.py  index.html
deploy/: Containerfile  docker-compose.yml  prometheus.yml
finalBinary/: cli.py  rgw_multisite_monitor-0.1.0-py3-none-any.whl
screenshots/: README.md
